--- a/frontend/duenos.html
+++ b/frontend/duenos.html
@@ -45,81 +45,84 @@
             </div>
         </nav>
         <div class="actions-menu">
-          <h1>Dueños de mascotas</h1>
-          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              Nueva
-          </button> 
-        </div>
-        <table class = "table table-stripped table-hover">
-            <thead class="thead-dark">
-                <tr>
+          <h1>Dueños de Mascotas</h1>
+          <div class="actions-menu-content">
+              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+                  Nuevo
+              </button>
+              <div class="alert alert-danger alert-dismissible" role="alert">
+                  <strong>Oops!</strong> Algo hicimos mal, por favor vuelve a intentarlo!.
+                  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                  </button>
+              </div>
+          </div>
+      </div>
+      <table class="table table-stripped table-hover">
+          <thead class="thead-dark">
+              <tr>
                   <th scope="col">#</th>
-                  <th scope="col">Identificación</th>
-                  <th scope="col">País</th>
+                  <th scope="col">Documento</th>
                   <th scope="col">Nombre</th>
                   <th scope="col">Apellido</th>
                   <th scope="col"></th>
-                </tr>
-              </thead>
-              <tbody id="lista-duenos">
-                
-              </tbody>
-        </table>
-        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">Nuevo dueño</h5>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                  <form id="form">
-                      <input type="hidden" id="indice">
-                      <div class="form-row">
-                        <div class="col">
-                          <select id="pais" class="form-control" id="exampleFormControlSelect1">
-                            <option>País</option>
-                            <option>Colombia</option>
-                            <option>Perú</option>
-                            <option>Ecuador</option>
-                            <option>Bolivia</option>
-                            <option>Venezuela</option>
-                            <option>Chile</option>
-                          </select>
-                        </div>
-                        <div class="col">
-                          <input type="text" id="identificacion" name="identificacion" class="form-control" placeholder="Identificación">
-                      </div>
-                      <div class="col">
-                        <div class="col">
-                            <input type="text" id="nombre" name="nombre" class="form-control" placeholder="Nombre">
-                        </div>
-                        <div class="col">
-                          <input type="text" id="apellido" name="apellido" class="form-control" placeholder="Apellido">
-                        </div>
-                      </div>
-                  </form>
-
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                  <button type="button" class="btn btn-primary" id="btn-guardar">Crear</button>
-                </div>
-              </div>
-            </div>
+              </tr>
+          </thead>
+          <tbody id="lista-duenos">
+              
+          </tbody>
+      </table>
+  </div>
+  <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalCenterTitle">Nuevo Dueño</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
           </div>
-    </div>
+          <div class="modal-body">
+              <form id="form">
+                  <input type="hidden" id="indice" >
+                  <div class="form-row">
+                    <div class="col">
+                      <input type="text" id="documento" name="documento" class="form-control" placeholder="Documento">
+                    </div>
+                  </div>
+                  <div class="form-row">
+                    <div class="col">
+                      <input type="text" id="nombre" name="nombre" class="form-control" placeholder="Nombre">
+                    </div>
+                  </div>
+                  <div class="form-row">
+                    <div class="col">
+                      <input type="text" id="apellido" name="apellido" class="form-control" placeholder="Apellido">
+                    </div>
+                  </div>
+              </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+            <button type="button" class="btn btn-primary" data-dismiss="modal" id="btn-guardar">Crear</button>
+          </div>
+        </div>
+      </div>
+  </div>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/v4-shims.js"></script>
+  <script src="./js/duenos.js"></script>
+</body>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script
-    -->
-    <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/v4-shims.js"></script>
-    <script src="./js/duenos.js"></script>
-  </body>
 </html>
